add scribe docs
